# Telemetria

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  config.json  debug_sensors.py  download_deps.py  hardware_monitor.py  receiver_config.example.json  receiver_notebook.py  requirements.txt  run_sender_admin.bat  run_test_admin.bat  sender_pc.py  sensors_output.txt  telemetria.py  test_connection.py  test_connectivity.py  test_monitor.py  test_output.txt  test_packet_detail.py  test_receiver_quick.py
core/: __init__.py  alerts.py  config.py  history.py  logging_config.py  protocol.py  sounds.py  validators.py
docs/: BUILD.md
scripts/: RUN_TELEMETRIA.bat  build_unified.py
telemetria-rust/: .gitignore  Cargo.toml  README.md  config.toml
telemetria-rust/crates/receiver/: Cargo.toml
telemetria-rust/crates/receiver/src/: dashboard.rs  main.rs  net_thread.rs  panels.rs  theme_egui.rs
telemetria-rust/crates/sender/: Cargo.toml
telemetria-rust/crates/sender/src/: lhm_sensors.rs  main.rs  monitor.rs  nvml_gpu.rs  smart_storage.rs  wmi_sensors.rs
telemetria-rust/crates/telemetry_core/: Cargo.toml
telemetria-rust/crates/telemetry_core/src/: alerts.rs  config.rs  lib.rs  protocol.rs  theme.rs  types.rs
tests/: debug_log.ipynb  test_admin_sensors.py  test_network.py
ui/: __init__.py  themes.py
ui/widgets/: __init__.py  panel.py  status_bar.py
web/: __init__.py  server.py
