[workspace]
members = [
    "crates/telemetry_core",
    "crates/sender",
    "crates/receiver",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
authors = ["Nyefall"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialização binária zero-copy
serde = { version = "1", features = ["derive"] }
bincode = "1"
# Configuração TOML
toml = "0.8"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Release otimizado
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
