[package]
name = "telemetry_receiver"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Telemetria Receiver – GPU-accelerated real-time dashboard"

[dependencies]
telemetry_core = { path = "../telemetry_core" }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# GUI GPU-accelerated
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",          # OpenGL backend (mais compatível)
    "persistence",
] }
egui = "0.31"
egui_plot = "0.31"

# Channels para comunicação entre threads
crossbeam-channel = "0.5"
