[package]
name = "telemetry_sender"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Telemetria Sender – Collects hardware metrics and broadcasts via UDP"

[dependencies]
telemetry_core = { path = "../telemetry_core" }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Hardware monitoring
sysinfo = "0.35"

# Sensores avançados – Windows only
[target.'cfg(windows)'.dependencies]
wmi = "0.14"
nvml-wrapper = "0.10"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
] }
