[package]
name = "telemetry_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared protocol, types and configuration for Telemetria system"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = "2"
